# IC_Engine

./: .gitmodules  main.py  pyproject.toml
cpp/: CMakeLists.txt  main.cpp
cpp/application/: CMakeLists.txt  engine_operating_charasteristics.cpp
cpp/common/: CMakeLists.txt
cpp/common/include/common/: math_utils.hpp  utils.hpp
cpp/ic_engine_lib/: CMakeLists.txt
cpp/ic_engine_lib/include/: engine.hpp  engine_component.hpp
cpp/ic_engine_lib/src/: engine.cpp
cpp/visualizer/: CMakeLists.txt
cpp/visualizer/example/rerun/: engine_3d_model.cpp  plot_2d.cpp  time_series_example.cpp
cpp/visualizer/include/: rerun_wrapper.hpp
cpp/visualizer/rerun_viz/: CMakeLists.txt
cpp/visualizer/rerun_viz/include/: plot_helper.hpp
cpp/visualizer/src/: example.cpp
engine_lib/: combustion_engine.py  engine_components.py
python/: engine.ipynb  examples.ipynb  main.py  pyproject.toml
python/concepts/: average_piston_speed.py
python/engine_lib/: combustion_engine.py  engine_components.py  theme.py
python/mplstyle/: obsidian.mplstyle
python/visualizer/rerun/: rerun_viz.py
