[project]
name = "ipython-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "numpy>=2.5.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
]

matplotlib = [
    "ipykernel>=7.3.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.11.0",
]

rerun = [
    "rerun-sdk>=0.33.0",
]
